theme style issues fixed , fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3717 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/_payslip_category_list.erb
+++ b/app/views/employee/_payslip_category_list.erb
@@ -30,7 +30,7 @@
   <%= link_to_remote "► #{t('add_new_category')}",
            :update => "payslip-category-form",
            :url => {:action => "add_payslip_category"},
-            :with=>"'emp_id=#{emp_id}&salary_date=#{salary_date}'" ,:class=>'submit_button'%>
+            :with=>"'emp_id=#{emp_id}&salary_date=#{salary_date}'", :html=> {:class=>'user_button'} %>
 </div>
 
 
