--- a/public/stylesheets/reminder/view_reminder.css
+++ b/public/stylesheets/reminder/view_reminder.css
@@ -90,6 +90,7 @@
 }
 #reminder-reply{
     margin:20px 0 20px 8px;
+    overflow: hidden;
 }
 .label-field-pair textarea:focus{
     background: #fff;
