--- a/public/stylesheets/employee/edit_rejected_payslip.css
+++ b/public/stylesheets/employee/edit_rejected_payslip.css
@@ -54,19 +54,8 @@
     width : 135px;
 }
 
-#submit-button input{
-    -moz-border-radius:10px;
-    -webkit-border-radius:10px;
-    background:#27292B none repeat scroll 0 0;
-    color:#FFFFFF;
-    font-family:arial;
-    font-size:14px;
-    font-weight:bold;
-    margin-left:281px;
-    margin-top:30px;
-    padding:7px 10px;
-    border:none;
-    cursor:pointer;
+a.user_button{
+    margin-top: 0 !important;
 }
 #form-content{
     width:500px;
