--- a/public/stylesheets/employee_attendance/employee_leave_details.css
+++ b/public/stylesheets/employee_attendance/employee_leave_details.css
@@ -51,28 +51,9 @@ display: block;
     font-size: 18px;
 }
 
-.submit_button3 {
-color:#27292B;
-text-decoration:none;
--moz-border-radius:10px 10px 10px 10px;
--webkit-border-radius:10px 10px 10px 10px;
-background:none repeat scroll 0 0 #27292B;
-border:medium none;
-color:#FFFFFF;
-cursor:pointer;
-font-family:arial;
-font-size:14px;
-font-weight:bold;
-margin-left:0px;
-padding:5px 5px;
-width:auto;
-display: inline-block;
-}
-
-.submit-button{
-    margin-top:20px;
-    margin-left:420px;
-    text-align: center;
+a.user_button{
+    margin-top: 20px;
+    margin-left: 420px;
 }
 
 table#listing{
