--- a/public/stylesheets/rtl/employee_attendance/employee_leave_reset_all.css
+++ b/public/stylesheets/rtl/employee_attendance/employee_leave_reset_all.css
@@ -12,42 +12,8 @@
 }
 
 #skip{
-    margin-top:28px;
     margin-right:130px;
-    float:right;
-    -moz-border-radius:12px;
-    -webkit-border-radius:12px;
-    background:none repeat scroll 0 0 #27292B;
-    color:#FFFFFF;
-    font-family:arial;
-    font-size:14px;
-    font-weight:bold;
-    padding:7px 10px;
 }
-#skip a{
-    color:#fff;
-    text-decoration: none;
-}
-#skip:hover,#add-more-parent:hover{
-   background:  #373B3F;
-}
-#skip1{
-    margin-top:28px;
-    margin-right:50px;
-    float:right;
-    -moz-border-radius:12px;
-    -webkit-border-radius:12px;
-    background:none repeat scroll 0 0 #27292B;
-    color:#FFFFFF;
-    font-family:arial;
-    font-size:14px;
-    font-weight:bold;
-    padding:7px 10px;
-}
-#skip1 a{
-    color:#fff;
-    text-decoration: none;
-}
-#skip1:hover,#add-more-parent:hover{
-   background:  #373B3F;
+.bread_crumb {
+ margin-right: 10px;
 }
