--- a/app/views/employee/advanced_search.html.erb
+++ b/app/views/employee/advanced_search.html.erb
@@ -210,7 +210,7 @@
       </div>
       <div class="extender"></div>
 
-      <div class="searched_for">
+      <div class="searched_for themed_text">
         <% unless params[:search][:first_name_or_middle_name_or_last_name_like].empty? %>
           <% searched_for = params[:search][:first_name_or_middle_name_or_last_name_like] %>
           <span><%= t('name') %>:</span> <%= params[:search][:first_name_or_middle_name_or_last_name_like] %>
