--- a/app/views/event/show.erb
+++ b/app/views/event/show.erb
@@ -32,23 +32,23 @@
 
 
   <div class="detail-box">
-    <div class="label">  <%= t('title') %> :</div>
+    <div class="label themed_text">  <%= t('title') %> :</div>
     <div class="description">
       <%= @event.title %>
     </div>
     <div class="extender"></div>
-    <div class="label"><%= t('description') %>:</div>
+    <div class="label themed_text"><%= t('description') %>:</div>
     <div class="description">
       <%= @event.description %>
     </div>
     <div class="extender"></div>
-    <div class="label">
+    <div class="label themed_text">
       <%= t('start_date') %> :</div>
     <div class="description">
       <%= @event.start_date %>
     </div>
     <div class="extender"></div>
-    <div class="label"><%= t('end_date') %>:</div>
+    <div class="label themed_text"><%= t('end_date') %>:</div>
     <div class="description">
       <%= @event.end_date %>
     </div>
