--- a/app/views/finance/_fees_submission_form.erb
+++ b/app/views/finance/_fees_submission_form.erb
@@ -53,7 +53,7 @@
         <tr class="tr-blank"></tr>
         <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
           <td class="col-1" ></td>
-          <td class="col-1" colspan="2"><span><%= t('discount') %> </span></td>
+          <td class="col-1" colspan="2"><span class="themed_text"><%= t('discount') %> </span></td>
         </tr>
         <% @batch_discounts.each do |d| %>
           <tr class="tr-<%= cycle("odd","even") %>">
@@ -104,7 +104,7 @@
       <% unless @fine.nil? %>
         <tr class="tr-<%= cycle("odd","even") %>">
           <td class="col-1"><%= i+=1 %></td>
-          <td class="col-2"><span><%= t('fine_on') %> <%= Date.today %></span></td>
+          <td class="col-2"><span class="themed_text"><%= t('fine_on') %> <%= Date.today %></span></td>
           <td class="col-6"><%= @fine.to_f %></td>
         </tr>
         <% total_fees += @fine.to_f %>
@@ -118,7 +118,7 @@
             <% if trans.fine_included %>
               <tr class="tr-<%= cycle("odd","even") %>">
                 <td class="col-1"><%= i+=1 %></td>
-                <td class="col-2"><span><%= t('fine_on') %> <%= trans.transaction_date %></span></td>
+                <td class="col-2"><span class="themed_text"><%= t('fine_on') %> <%= trans.transaction_date %></span></td>
                 <td class="col-6"><%= trans.fine_amount %></td>
               </tr>
               <% total_fees += trans.fine_amount.to_f %>
@@ -131,7 +131,7 @@
         <tr class="tr-blank"></tr>
         <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
           <td class="col-1" ></td>
-          <td class="col-1" colspan="2" ><span><%= t('payment_done') %></span></td>
+          <td class="col-1" colspan="2" ><span class="themed_text"><%= t('payment_done') %></span></td>
         </tr>
 
         <% paid = 0 %>
