--- a/app/views/finance/pay_fees_defaulters.html.erb
+++ b/app/views/finance/pay_fees_defaulters.html.erb
@@ -29,14 +29,14 @@
 
   <% unless flash[:notice].nil? %> <p class="flash-msg"> <%= flash[:notice] %> </p> <% end %>
 
-  <div class="name"><%= t('fees_receipt_no') %></div><div class="val"><span>:</span>F<%= @financefee.id %></div>
+  <div class="name"><%= t('fees_receipt_no') %></div><div class="val themed_text"><span>:</span>F<%= @financefee.id %></div>
   <% unless @fee_category.nil? %>
-    <div class="name"><%= t('fee_category_name') %></div><div class="val"><span>:</span><%= @fee_category.name %></div>
+    <div class="name"><%= t('fee_category_name') %></div><div class="val themed_text"><span>:</span><%= @fee_category.name %></div>
   <% end %>
   <% unless @student.student_category.nil? %>
-    <div class="name"><%= t('student_category') %></div><div class="val"><span>:</span><%= @student.student_category.name %></div
+    <div class="name"><%= t('student_category') %></div><div class="val themed_text"><span>:</span><%= @student.student_category.name %></div
   <% else %>
-    <div class="name"><%= t('student_category') %></div><div class="val"><span>:</span>N.A</div>
+    <div class="name"><%= t('student_category') %></div><div class="val themed_text"><span>:</span>N.A</div>
   <% end %>
   <br /><br />
 
@@ -70,7 +70,7 @@
           <tr class="tr-blank"></tr>
           <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
             <td class="col-1"></td>
-            <td class="col-1" colspan="3" ><span><%= t('discount') %></span></td>
+            <td class="col-1" colspan="3" ><span class="themed_text"><%= t('discount') %></span></td>
           </tr>
           <% @batch_discounts.each do |d| %>
             <tr class="tr-<%= cycle("odd","even") %>">
@@ -120,7 +120,7 @@
         <% unless @fine.nil? %>
           <tr class="tr-<%= cycle("odd","even") %>">
             <td class="col-1"><%= i+=1 %></td>
-            <td class="col-2"><span><%= t('fine_on') %> <%= Date.today %></span></td>
+            <td class="col-2"><span class="themed_text"><%= t('fine_on') %> <%= Date.today %></span></td>
             <td class="col-6"><%= @fine %></td>
           </tr>
           <% total_fees += @fine.to_f %>
@@ -135,7 +135,7 @@
               <% if trans.fine_included %>
                 <tr class="tr-<%= cycle("odd","even") %>">
                   <td class="col-1"><%= i+=1 %></td>
-                  <td class="col-2"><span><%= t('fine_on') %> <%= trans.transaction_date %></span></td>
+                  <td class="col-2"><span class="themed_text"><%= t('fine_on') %> <%= trans.transaction_date %></span></td>
                   <td class="col-6"><%= trans.fine_amount %></td>
                 </tr>
                 <% total_fees += trans.fine_amount.to_f %>
@@ -149,7 +149,7 @@
           <tr class="tr-blank"></tr>
           <tr class="tr-<%= cycle("odd","even") %>" cellpadding="1" cellspacing="1">
             <td class="col-1"></td>
-            <td class="col-1" colspan="3" ><span><%= t('payment_done') %></span></td>
+            <td class="col-1" colspan="3" ><span class="themed_text"><%= t('payment_done') %></span></td>
           </tr>
           <% paid = 0 %>
           <% @paid_fees.each do |p| %>
