--- a/app/views/finance/student_fees_structure.html.erb
+++ b/app/views/finance/student_fees_structure.html.erb
@@ -28,11 +28,11 @@
 <div id="page-yield">
   <div class="box">
     <br/>
-    <div class="name"><%= t('fee_collection_name') %></div><div class="val"><span>:</span><%= @fee_collection.name %></div>
-    <div class="name"><%= t('fee_category_name') %></div><div class="val"><span>:</span><%= @fee_category.name %></div>
-    <div class="name"><%= t('start_date') %></div><div class="val"><span>:</span><%= @fee_collection.start_date %></div>
-    <div class="name"><%= t('end_date') %></div><div class="val"><span>:</span><%= @fee_collection.end_date %></div>
-    <div class="name"><%= t('due_date') %></div><div class="val"><span>:</span><%= @fee_collection.due_date %></div>
+    <div class="name"><%= t('fee_collection_name') %></div><div class="val themed_text"><span>:</span><%= @fee_collection.name %></div>
+    <div class="name"><%= t('fee_category_name') %></div><div class="val themed_text"><span>:</span><%= @fee_category.name %></div>
+    <div class="name"><%= t('start_date') %></div><div class="val themed_text"><span>:</span><%= @fee_collection.start_date %></div>
+    <div class="name"><%= t('end_date') %></div><div class="val themed_text"><span>:</span><%= @fee_collection.end_date %></div>
+    <div class="name"><%= t('due_date') %></div><div class="val themed_text"><span>:</span><%= @fee_collection.due_date %></div>
     <br /><br />
     <% total_fees =0 %>
     <div id="fees-table">
