--- a/app/views/student/advanced_search.erb
+++ b/app/views/student/advanced_search.erb
@@ -179,7 +179,7 @@
         <% end %>
       </div>
       <div class="extender"></div>
-      <div class="searched_for">
+      <div class="searched_for themed_text">
         <%= @searched_for %>
       </div>
 
