--- a/app/views/finance/add_particulars.html.erb
+++ b/app/views/finance/add_particulars.html.erb
@@ -32,18 +32,18 @@
   <br/>
 
   <div id="particular-box">
-    <div class="name"><%= t('category_name') %></div><div class="val"><span>:</span><%= @additional_category.name %></div>
-    <div class="name"><%= t('description') %></div><div class="val"><span>:</span><%= @additional_category.description %></div>
+    <div class="name"><%= t('category_name') %></div><div class="val themed_text"><span>:</span><%= @additional_category.name %></div>
+    <div class="name"><%= t('description') %></div><div class="val themed_text"><span>:</span><%= @additional_category.description %></div>
 
 
     <% unless @additional_category.batch.nil? %>
-      <div class="name"><%= t('course_text') %></div><div class="val"><span>:</span><%= @additional_category.batch.full_name %></div>
+      <div class="name"><%= t('course_text') %></div><div class="val themed_text"><span>:</span><%= @additional_category.batch.full_name %></div>
     <% else %>
-      <div class="name"><%= t('course_text') %></div><div class="val"><span>:</span>ALL</div>
+      <div class="name"><%= t('course_text') %></div><div class="val themed_text"><span>:</span>ALL</div>
     <% end %>
-    <div class="name"><%= t('start_date') %></div><div class="val"><span>:</span><%= @collection_date.start_date %></div>
-    <div class="name"><%= t('end_date') %></div><div class="val"><span>:</span><%= @collection_date.end_date%></div>
-    <div class="name"><%= t('due_date') %></div><div class="val"><span>:</span><%= @collection_date.due_date%></div>
+    <div class="name"><%= t('start_date') %></div><div class="val themed_text"><span>:</span><%= @collection_date.start_date %></div>
+    <div class="name"><%= t('end_date') %></div><div class="val themed_text"><span>:</span><%= @collection_date.end_date%></div>
+    <div class="name"><%= t('due_date') %></div><div class="val themed_text"><span>:</span><%= @collection_date.due_date%></div>
 
     <br />
 
