--- a/app/views/finance/donation_receipt.erb
+++ b/app/views/finance/donation_receipt.erb
@@ -31,15 +31,15 @@
   <div class="box">
 
     <div class="field1"><%= t('donor') %>:</div>
-    <div class="val"> <%= @donation.donor %></div>
+    <div class="val themed_text"> <%= @donation.donor %></div>
 
     <div class="field1"><%= t('description') %>: </div>
-    <div class="val"><%= @donation.description %></div>
+    <div class="val themed_text"><%= @donation.description %></div>
 
     <div class="field1"><%= t('amount') %>: </div>
-    <div class="val"><%= @donation.amount %></div>
+    <div class="val themed_text"><%= @donation.amount %></div>
     <div class="field1"><%= t('transaction_id') %>: </div>
-    <div class="val"><%= @donation.transaction_id unless @donation.transaction_id.nil? %></div>
+    <div class="val themed_text"><%= @donation.transaction_id unless @donation.transaction_id.nil? %></div>
     <div>
       <%= link_to "► #{t('print_receipt')}", {:action => 'donation_receipt_pdf', :id => @donation.id}, :format => 'pdf', :target => '_blank', :class=>"user_button" %>
     </div>
