--- a/app/views/news/view.erb
+++ b/app/views/news/view.erb
@@ -33,7 +33,7 @@
     <div id="news_title">
       <%= @news.title %>
     </div>
-    <div id="create_date">
+    <div id="create_date" class="themed_text">
       <%= t('posted_on') %> <%= I18n.l(@news.created_at,:format=>"%A, %d %B, %Y") %>
     </div>
     <div id="news_content">
