--- a/app/views/student/reports.erb
+++ b/app/views/student/reports.erb
@@ -34,7 +34,7 @@
 
     <div class="exam-results-reports-col">
       <% if permitted_to? :exam_report, :student %>
-        <h4><%= t('recent_exams') %></h4>
+        <h4 class="themed_text"><%= t('recent_exams') %></h4>
         <ul>
           <% @exam_groups.each do |e| %>
             <li><%= link_to e.name,{:controller => 'exam', :action => 'generated_report',:exam_group=>e.id, :student=>@student.id}%></li>
@@ -42,7 +42,7 @@
         </ul>
       <%end%>
 
-      <h4><%= t('subject_wise_report') %></h4>
+      <h4 class="themed_text"><%= t('subject_wise_report') %></h4>
       <ul>
         <% @subjects.each do |s| %>
           <li><%= link_to s.name, { :controller => 'exam', :action => 'generated_report3', :student => @student.id, :subject => s.id } %></li>
@@ -52,7 +52,7 @@
 
     <div class="exam-results-reports-col">
 
-      <h4><%= t('detailed_report') %></h4>
+      <h4 class="themed_text"><%= t('detailed_report') %></h4>
       <ul>
         <% unless @grouped_exams.empty? %>
           <li><%= link_to "#{t('final_report')}(#{t('exam_goruped')})",{:controller=>'exam', :action=>'generated_report4',:student=>@student.id,:type=>'grouped'} %></li>
@@ -69,7 +69,7 @@
       </ul>
 
       <% unless @old_batches.empty? %>
-        <h4><%= t('archives') %></h4>
+        <h4 class="themed_text"><%= t('archives') %></h4>
         <ul>
           <% @old_batches.each do |b| %>
             <% unless @grouped_exams.empty? %>
@@ -92,13 +92,13 @@
 
     <h3><%= t('attendance') %></h3>
 
-    <h4><%= t('detailed_report') %></h4>
+    <h4 class="themed_text"><%= t('detailed_report') %></h4>
 
     <ul>
       <li><%= link_to "#{t('current_year_report')}", :controller => 'student_attendance', :action => 'student', :id => @student %></li>
     </ul>
     <% unless @old_batches.empty? %>
-      <h4><%= t('archives') %></h4>
+      <h4 class="themed_text"><%= t('archives') %></h4>
 
       <ul>
         <% @old_batches.each do |b| %>
