white color of button links in table made important , fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3725 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1023,7 +1023,7 @@ textarea{
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
     background:#27292B none repeat scroll 0 0;
-    color:#FFFFFF;
+    color:#FFFFFF !important;
     font-family:arial;
     font-size:14px;
     font-weight:bold;
