fixed user_button style , fixes #3564
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3732 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/_attendance_report.erb
+++ b/app/views/employee/_attendance_report.erb
@@ -56,7 +56,7 @@
     <div class="type_nameeven"><div class="total"><%= t('total_leaves_taken')  %>:</div><div class="count"><%= total_leave %></div></div>
   </div>
   <div class="pdf-link">
-    <%=  link_to " ►#{t('pdf_report')}", :controller=>"employee_attendance", :action=>"employee_attendance_pdf", :id=>@employee.id, :format=>'pdf' %>
+    <%=  link_to " ►#{t('pdf_report')}", {:controller=>"employee_attendance", :action=>"employee_attendance_pdf", :id=>@employee.id, :format=>'pdf'}, :class => 'user_button' %>
   </div>
 </div>
 
