--- a/public/stylesheets/rtl/employee/create_monthly_payslip.css
+++ b/public/stylesheets/rtl/employee/create_monthly_payslip.css
@@ -244,3 +244,24 @@ ul{
     margin-top:10px;
     margin-bottom: 20px;
 }
+
+#submit-button input{
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    background:#27292B;
+    color:#FFFFFF;
+    font-family:arial;
+    font-size:14px;
+    font-weight:bold;
+    margin: 0px auto;
+    padding:7px 12px;
+    border:none;
+    float:left;
+    text-align:center;
+    width:auto;
+    cursor:pointer;
+}
+
+#submit-button input:hover{
+    background:#373B3F;
+}
