input button style issue fixed, fixes #3581
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3735 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/employee/create_monthly_payslip.css
+++ b/public/stylesheets/employee/create_monthly_payslip.css
@@ -268,7 +268,7 @@ ul{
     margin: 0px auto;
     padding:7px 12px;
     border:none;
-    float:left;
+    float:right;
     text-align:center;
     width:auto;
     cursor:pointer;
